fix(tabcontrol): fix line tabcontrol alignment.

--- a/src/app/components/tabcontrol/tab/tab.scss
+++ b/src/app/components/tabcontrol/tab/tab.scss
@@ -1,6 +1,6 @@
 .tab-wrapper {
-  width: 100%;
   background: #fff;
+  box-sizing: border-box;
   padding: 10px;
   border-left: 1px solid #cacaca;
   border-right: 1px solid #cacaca;
